--- a/web_scraping/reddit/scraping.ipynb
+++ b/web_scraping/reddit/scraping.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,11 +44,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "redditIds = [\"2a6bx2\"] \n",
+    "redditIds = [\"\"] \n",
     "comment_data = [] "
    ]
   },
@@ -57,24 +57,31 @@
    "metadata": {},
    "source": [
     "\n",
-    "This code iterates over each Reddit post ID in the redditIds list. For each post ID, it fetches the corresponding Reddit post and retrieves its comments. It then filters the comments to include only those with fewer than 80 words, appending them to the comment_data list along with their content."
+    "This code iterates through each Reddit post ID in the redditIds list. For each post ID, it retrieves the corresponding Reddit post and its comments. It collects comments with fewer than 80 words into the comment_data list, limiting the total number of comments to 200 (comment_limit). Once the limit is reached, the loop terminates early to avoid collecting additional comments beyond the limit."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
+    "comment_limit = 200\n",
+    "\n",
     "for redditId in redditIds:\n",
     "    post = reddit.submission(id=redditId)\n",
     "    comments = post.comments\n",
+    "    comment_count = 0\n",
     "    \n",
     "    for comment in comments:\n",
     "        if isinstance(comment, MoreComments):\n",
     "            continue\n",
     "        if len(comment.body.split()) < 80:\n",
-    "            comment_data.append({'Comment': comment.body})"
+    "            comment_data.append({'Comment': comment.body})\n",
+    "            comment_count += 1\n",
+    "            \n",
+    "            if comment_count >= comment_limit:\n",
+    "                break"
    ]
   },
   {
@@ -86,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +331,7 @@
        "19  im waiting for the first one who called this m...        reddit"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
