--- a/web_scraping/reddit/scraping.ipynb
+++ b/web_scraping/reddit/scraping.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,11 +44,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "redditIds = [\"\"] \n",
+    "redditIds = [\"8z23sa\"] \n",
     "comment_data = [] "
    ]
   },
@@ -62,11 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
-    "comment_limit = 200\n",
+    "comment_limit = 300\n",
     "\n",
     "for redditId in redditIds:\n",
     "    post = reddit.submission(id=redditId)\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,11 +111,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"Reddit_IDs.txt\", \"w\") as file:\n",
+    "with open(\"Reddit_IDs.txt\", \"a\") as file:\n",
     "    file.write(redditId + \"\\n\")"
    ]
   },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -185,121 +185,121 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>5 - 0 in the first 30 mins... wow...</td>\n",
+       "      <td>Meanwhile random Ronaldinho on the drums becau...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>\"The last time I saw a brazillian get fucked t...</td>\n",
+       "      <td>Lloris has a bet on for 4-2</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Do you know that feeling when you go take a du...</td>\n",
-       "      <td></td>\n",
-       "      <td>reddit</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
        "      <td>[deleted]</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>I'll never understand while fuckery like kicki...</td>\n",
+       "      <td></td>\n",
+       "      <td>reddit</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>What the fuck is happening</td>\n",
+       "      <td>Imagine the biggest game in the world not bein...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>[My reaction to the Germans right now](https:/...</td>\n",
+       "      <td>Lmao, the Telemundo commentators: \"I don't kno...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>http://i.imgur.com/duh3R8r.jpg</td>\n",
+       "      <td>Croatia is definitely playing like it’s the on...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>http://i.minus.com/i8Noum4fZjDPV.gif</td>\n",
+       "      <td>FIFA has unlimited money and yet I can't think...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>This is like the Red Wedding of futbol games.</td>\n",
+       "      <td>First step of Croatian master plan accomplishe...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>German here. Love this team, but WTF Brasilia,...</td>\n",
+       "      <td>Again, for sheer entertainment, this is the be...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>I´m feeling so sad for the brazilian fans righ...</td>\n",
+       "      <td>ooh look lloris learned</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>7 - 1 - Most embarrassing semi, since I went t...</td>\n",
+       "      <td>At the end we didn’t have anything to lose in ...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>7-0 score, I'm a german, but at this point I w...</td>\n",
+       "      <td>Lloris: Not falling for that again</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>I tried uploading the video of the match to Po...</td>\n",
+       "      <td>Gotta give it to our president - only girl on ...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>it's like basketball</td>\n",
+       "      <td>Reddit crashed and rolled like Neymar for 5 mi...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>Mit dem Herz in der Hand und der Leidenschaft ...</td>\n",
+       "      <td>Fuck it, they won it in my hearth.\\n\\nCongratz...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>When it rains, it pours!</td>\n",
+       "      <td>The game within the game: Will the mods sticky...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>\"It will be a great game!\", they said.</td>\n",
+       "      <td>[deleted]</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>This reminds me of the Canucks vs Bruins game ...</td>\n",
+       "      <td>goddamnit and next will be maradona coming in ...</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>im waiting for the first one who called this m...</td>\n",
+       "      <td>Never go 1-0 up against croatia</td>\n",
        "      <td></td>\n",
        "      <td>reddit</td>\n",
        "    </tr>\n",
@@ -309,29 +309,29 @@
       ],
       "text/plain": [
        "                                              Comment label  source\n",
-       "0                5 - 0 in the first 30 mins... wow...        reddit\n",
-       "1   \"The last time I saw a brazillian get fucked t...        reddit\n",
-       "2   Do you know that feeling when you go take a du...        reddit\n",
-       "3                                           [deleted]        reddit\n",
-       "4                          What the fuck is happening        reddit\n",
-       "5   [My reaction to the Germans right now](https:/...        reddit\n",
-       "6                      http://i.imgur.com/duh3R8r.jpg        reddit\n",
-       "7                http://i.minus.com/i8Noum4fZjDPV.gif        reddit\n",
-       "8      This is like the Red Wedding of futbol games.         reddit\n",
-       "9   German here. Love this team, but WTF Brasilia,...        reddit\n",
-       "10  I´m feeling so sad for the brazilian fans righ...        reddit\n",
-       "11  7 - 1 - Most embarrassing semi, since I went t...        reddit\n",
-       "12  7-0 score, I'm a german, but at this point I w...        reddit\n",
-       "13  I tried uploading the video of the match to Po...        reddit\n",
-       "14                               it's like basketball        reddit\n",
-       "15  Mit dem Herz in der Hand und der Leidenschaft ...        reddit\n",
-       "16                           When it rains, it pours!        reddit\n",
-       "17             \"It will be a great game!\", they said.        reddit\n",
-       "18  This reminds me of the Canucks vs Bruins game ...        reddit\n",
-       "19  im waiting for the first one who called this m...        reddit"
+       "0   Meanwhile random Ronaldinho on the drums becau...        reddit\n",
+       "1                         Lloris has a bet on for 4-2        reddit\n",
+       "2                                           [deleted]        reddit\n",
+       "3   I'll never understand while fuckery like kicki...        reddit\n",
+       "4   Imagine the biggest game in the world not bein...        reddit\n",
+       "5   Lmao, the Telemundo commentators: \"I don't kno...        reddit\n",
+       "6   Croatia is definitely playing like it’s the on...        reddit\n",
+       "7   FIFA has unlimited money and yet I can't think...        reddit\n",
+       "8   First step of Croatian master plan accomplishe...        reddit\n",
+       "9   Again, for sheer entertainment, this is the be...        reddit\n",
+       "10                            ooh look lloris learned        reddit\n",
+       "11  At the end we didn’t have anything to lose in ...        reddit\n",
+       "12                Lloris: Not falling for that again         reddit\n",
+       "13  Gotta give it to our president - only girl on ...        reddit\n",
+       "14  Reddit crashed and rolled like Neymar for 5 mi...        reddit\n",
+       "15  Fuck it, they won it in my hearth.\\n\\nCongratz...        reddit\n",
+       "16  The game within the game: Will the mods sticky...        reddit\n",
+       "17                                          [deleted]        reddit\n",
+       "18  goddamnit and next will be maradona coming in ...        reddit\n",
+       "19                    Never go 1-0 up against croatia        reddit"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
